--- a/main.html
+++ b/main.html
@@ -12,11 +12,11 @@
 			let nums1=new Set(arr);
 			let nums2=[...nums1]
 			if(nums2.length<2){
-			    console.log(-Infinity)
+			    return -Infinity;
 			}
 			else{
 			    nums2.sort();
-			    console.log(nums2[nums2.length-2])
+			    return nums2[nums2.length-2];
 			}
 			
 		}
