--- a/main.html
+++ b/main.html
@@ -15,7 +15,7 @@
 			    return -Infinity;
 			}
 			else{
-			    nums2.sort();
+				nums2.sort((a,b)=>a-b);
 			    return nums2[nums2.length-2];
 			}
 			
